--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Curso Git</title>
+  <title>Curso Git Devops</title>
   
 </head>
 <body>
   <ul>
     <li>Vagrant</li>
-    <li>Docker</li>
+    <li>Docker Criando Containers sem dor de cabeca</li>
     <li>Ansible</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
   </ul>
