--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <ul>
     <li>Vagrant</li>
-    <li>Docker Criando Containers sem dor de cabeca</li>
+    <li>Docker Criando Containers sem dor de Cabeca</li>
     <li>Ansible</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
   </ul>
