--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <li>Docker</li>
     <li>Ansible</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
+    <li>Kubernetes</li>
+
+
   </ul>
 </body>
 </html>
