--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
 <body>
   <ul>
     <li>Vagrant</li>
-    <li>Docker</li>
+    <li>Docker Criando Containers sem dor de Cabeca</li>
     <li>Ansible</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
+    <li>Kubernetes</li>
+
+
   </ul>
 </body>
 </html>
