--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <ul>
     <li>Vagrant</li>
 
-    <li>Docker Criando Containers sem dor de Cabeca GIT</li>
+    <li>Docker Criando Containers sem dor de Cabeca GITT</li>
 
     <li>Ansible</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
