Alterando o curso de kubernetes

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <li>Ansible GG</li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
-    <li>Kubernetes</li>
+    <li>Kubernetes: Curso de Kubernetes</li>
 
 
   </ul>
