--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <li>Docker Criando Containers sem dor de Cabeca GITT</li>
 
-    <li>Ansible GG</li>
+    <li>Ansible: Infraestrutura como código </li>
     <li>Integração Contínua e maturidade no desenvolvimento do projeto</li>
     <li>Kubernetes: Curso de Kubernetes</li>
 
